--- a/midi_vidi.ipynb
+++ b/midi_vidi.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "switcher = [''] * 128\n",
     "\n",
-    "switcher[0] = 'C:/Users/shelt/Desktop/_DSC2393.png'\n",
+    "switcher[0] = ''\n",
     "switcher[1] = ''\n",
     "switcher[2] = ''\n",
     "switcher[3] = ''\n",
@@ -42,7 +42,7 @@
     "switcher[23] = ''\n",
     "switcher[24] = ''\n",
     "switcher[25] = ''\n",
-    "switcher[26] = 'C:/Users/shelt/Desktop/_DSC2393.png'\n",
+    "switcher[26] = ''\n",
     "switcher[27] = ''\n",
     "switcher[28] = ''\n",
     "switcher[29] = ''\n",
@@ -142,7 +142,7 @@
     "switcher[123] = ''\n",
     "switcher[124] = ''\n",
     "switcher[125] = ''\n",
-    "switcher[126] = 'E:/Downloads/zzz.jpg'\n",
+    "switcher[126] = ''\n",
     "switcher[127] = ''\n"
    ]
   },
